--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "type": "module",
     "homepage": "https://github.com/2022-spring-AjouCSCapstone2/lupin_server#readme",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.19.2",
         "connect-redis": "^6.1.3",
         "cookie-parser": "^1.4.6",
