:boom: changed language to typescript
- class 라는 명칭이 예약어로 사용되기 때문에, 동일한 의미를 지니는 Course 로 변경함
- typescript + express 작업 진행
- 로그인, 로그아웃, 회원가입 작업 완료
- 이외 모듈화 진행 및 폴더 구조 정리 진행

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-PORT=3000
+PORT=5000
 
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_SECRET=testsecret1234
+REDIS_HOST=<YOUR_HOST, default: localhost>
+REDIS_PORT=<YOUR_PORT, default: 6379>
+REDIS_SECRET=<YOUR_SECRET>
+
+DATABASE_PORT=<YOUR_PORT, default: 27017>
+DATABASE_HOST=<YOUR_HOST, default: localhost>
+DATABASE_USER=<YOUR_USER_NAME>
+DATABASE_PASSWORD=<YOUR_USER_PASSWORD>
+DATABASE_SCHEMA=lupin
