--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "lupin_server",
     "version": "1.0.0",
     "description": "lupin system server",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
-        "dev": "node index.js",
+        "dev": "nodemon",
         "lint": "eslint \"src/**/*.js\" --fix"
     },
     "repository": {
@@ -16,26 +16,49 @@
     "bugs": {
         "url": "https://github.com/2022-spring-AjouCSCapstone2/lupin_server/issues"
     },
-    "type": "module",
     "homepage": "https://github.com/2022-spring-AjouCSCapstone2/lupin_server#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.2",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.13.2",
         "connect-redis": "^6.1.3",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-session": "^1.17.2",
+        "ioredis": "^5.0.3",
+        "module-alias": "^2.2.2",
         "mongoose": "^6.2.8",
-        "redis": "^4.0.4",
+        "morgan": "^1.10.0",
+        "passport": "^0.5.2",
+        "passport-local": "^1.0.0",
         "socket.io": "^4.4.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/body-parser": "^1.19.2",
+        "@types/connect-redis": "^0.0.18",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.4",
+        "@types/ioredis": "^4.28.10",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^17.0.23",
+        "@types/passport": "^1.0.7",
+        "@types/passport-local": "^1.0.34",
+        "@typescript-eslint/parser": "^5.17.0",
         "eslint": "^8.12.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.6.1"
+        "nodemon": "^2.0.15",
+        "prettier": "^2.6.1",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.3"
+    },
+    "_moduleAliases": {
+        "~": "src"
     }
 }
