--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ DATABASE_HOST=<YOUR_HOST, default: localhost>
 DATABASE_USER=<YOUR_USER_NAME>
 DATABASE_PASSWORD=<YOUR_USER_PASSWORD>
 DATABASE_SCHEMA=lupin
+
+SESSION_MODE=<YOUR_SESSION_MODE, default: redis, redis or file>
