--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "morgan": "^1.10.0",
         "passport": "^0.5.2",
         "passport-local": "^1.0.0",
+        "session-file-store": "^1.5.0",
         "socket.io": "^4.4.1"
     },
     "devDependencies": {
@@ -47,6 +48,8 @@
         "@types/node": "^17.0.23",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
+        "@types/session-file-store": "^1.2.2",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.17.0",
         "eslint": "^8.12.0",
         "eslint-config-airbnb-base": "^15.0.0",
