--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@ REDIS_HOST=<YOUR_HOST, default: localhost>
 REDIS_PORT=<YOUR_PORT, default: 6379>
 REDIS_SECRET=<YOUR_SECRET>
 
-DATABASE_PORT=<YOUR_PORT, default: 27017>
+DATABASE_PORT=<YOUR_PORT, default: 3306>
 DATABASE_HOST=<YOUR_HOST, default: localhost>
 DATABASE_USER=<YOUR_USER_NAME>
 DATABASE_PASSWORD=<YOUR_USER_PASSWORD>
 DATABASE_SCHEMA=lupin
 
 SESSION_MODE=<YOUR_SESSION_MODE, default: redis, redis or file>
+
+NODE_ENV=local
