--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/2022-spring-AjouCSCapstone2/lupin_server#readme",
     "dependencies": {
+        "aws-sdk": "^2.1143.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.2",
         "class-transformer": "^0.5.1",
@@ -32,6 +33,8 @@
         "module-alias": "^2.2.2",
         "mongoose": "^6.2.8",
         "morgan": "^1.10.0",
+        "multer": "^1.4.4",
+        "multer-s3": "^2.10.0",
         "mysql2": "^2.3.3",
         "passport": "^0.5.2",
         "passport-local": "^1.0.0",
@@ -50,6 +53,8 @@
         "@types/express-session": "^1.17.4",
         "@types/ioredis": "^4.28.10",
         "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7",
+        "@types/multer-s3": "^2.7.12",
         "@types/node": "^17.0.23",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
