:sparkles: added user setting router
- 유저 정보 업데이트 관련 라우터 추가
- 게시글에 댓글 달 수 있는 기능 추가
- type declaration 파일 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "sourceRoot": "./",
     "sourceMap": true,
     "typeRoots": [
-      "node_modules/@types",
-      "./@types"
+      "./@types",
+      "node_modules/@types"
     ],
     "paths": {
       "~/*": ["src/*"]
